--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     ],
     weekdayOnly: [
       //--- { id:"jeune_vendredi", label:"Jeûne : vendredi", cat:"Ascèse", days:[5] },
-      { id:"abstinence_vendredi", label:"Abstinence : vendredi (viande)", cat:"Ascèse", days:[5] },
+      { id:"abstinence_vendredi", label:"Abstinence : vendredi (pas de viande)", cat:"Ascèse", days:[5] },
     ],
     weekly: [
       { id:"aumone", label:"Aumône : 1 geste concret (rendre un service, partager quelque chose, donner du temps)", cat:"Charité & fraternité" },
