--- a/index.html
+++ b/index.html
@@ -477,8 +477,7 @@ const banner = document.getElementById("specialBanner");
 
 if(info){
   banner.style.display = "block";
-  banner.innerHTML = "⭐ " + info.label +
-    (info.liftAscese ? " · Ascèses levées (sauf sommeil)" : "");
+  banner.innerHTML = "⭐ " + info.label ");
 }else{
   banner.style.display = "none";
 }
