Update label jour spé.html

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ const banner = document.getElementById("specialBanner");
 
 if(info){
   banner.style.display = "block";
-  banner.innerHTML = "⭐ " + info.label ");
+  banner.innerHTML = "⭐ " + info.label ;
 }else{
   banner.style.display = "none";
 }
